--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "webpack-hot-middleware": "^2.6.0"
   },
   "dependencies": {
+    "jquery": "^2.2.1",
     "react": "^0.14.3",
     "react-dom": "^0.14.3"
   }
